--- a/Problems/Check a number is positive/task.html
+++ b/Problems/Check a number is positive/task.html
@@ -3,8 +3,8 @@
 <html>
  <head></head>
  <body>
-  <p><span>Write a program that reads the number and prints </span><b>YES</b><span> if it is positive. Otherwise, the program should print </span><b>NO</b><span>.</span><br></p>
-  <p><span>Do not forget that zero is not a positive number.<br></span></p>
+  <p>Write a program that reads a number and prints <strong>YES</strong> if it is positive. Otherwise, the program should print <strong>NO</strong>.</p> 
+  <p>Do not forget that zero is not a positive number.</p>
  </body>
 </html><br><b>Sample Input:</b><br>7<br><b>Sample Output:</b><br>YES<br><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 8 seconds</font><br><br>
 <a href="https://hyperskill.org/learn/step/4625">Show topic summary</a>
